--- a/doc/latex2/references.bib
+++ b/doc/latex2/references.bib
@@ -75,7 +75,7 @@
 	journal = "Journal of Statistical Software",
 	number = "14",
 	pages = "1--6",
-	title = "{Xorshift rngs}",
+	title = "{Xorshift RNGs}",
 	volume = "8",
 	year = "2003"
 }
