--- a/doc/latex2/thesis.tex
+++ b/doc/latex2/thesis.tex
@@ -67,7 +67,7 @@
 % \end{dedication}
 
 \begin{acknowledgements}
-  This masters thesis marks the end of a five year education, and education I could not have completed without the help of my parents.\\
+  This masters thesis marks the end of a five year education, which I could not have completed without the help of my parents.\\
   
   \noindent I would like to thank my counselor, Hans Petter Langtangen, for forcing me to rewrite the entire thesis. It was hard, but worth it. 
   Thanks to Geir Halnes, and Gaute Einevoll for help with the applications part of the thesis, and interesting discussions. \\
